# s1vm

./: .gitignore  Cargo.toml  Ideas.md  LICENSE  README.md  Readme.md  fib.wat  for_loop.wasm  for_loop.wat  for_loop_64.wasm  for_loop_64.wat
bare-metal-wasm/: Cargo.toml  bare_metal_wasm.wasm  build_wasm_opt.sh
bare-metal-wasm/src/: lib.rs
src/: compiler.rs  error.rs  function.rs  isa.rs  lib.rs  module.rs  op.rs  stack.rs  value.rs  vm.rs
