[package]
name = "s1vm"
version = "0.1.0"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
edition = "2018"

[dependencies]
bwasm = "0.1.1"
wasmi-validation = "0.4"
parity-wasm = "0.41"

# uncomment these to do profiling.
[profile.dev]
opt-level = 1

[profile.release]
debug = true
