[package]
name = "s1vm"
version = "0.1.1"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Fast WebAssembly interpreter"
keywords = ["wasm", "webassembly", "interpreter"]
repository = "https://github.com/Neopallium/s1vm"
homepage = "https://github.com/Neopallium/s1vm"

[dependencies]
bwasm = "0.1.1"
wasmi-validation = "0.4"
parity-wasm = "0.41"

# uncomment these to do profiling.
[profile.dev]
opt-level = 1

[profile.release]
#debug = true
lto = "fat"
codegen-units = 1
